# bcc-shell

./: CODEOWNERS  Makefile  README.md  README.rst  cabal  cabal.project  default.nix  release.nix  shell.nix  stack-shell.nix  stack.yaml  test.nix  updater-test-win-nix
bcc-launcher/: README.md  bcc-launcher.cabal
bcc-launcher/app/: Main.hs
bcc-launcher/app/Mocks/: Bcc-Wallet.hs  Installer.hs
bcc-launcher/configuration/: cert-configuration.yaml
bcc-launcher/configuration/launcher/: launcher-config-demo.windows.yaml  launcher-config-demo.yaml  launcher-config-mainnet.linux.yaml  launcher-config-mainnet.macos64.yaml  launcher-config-staging.linux.yaml  launcher-config-staging.macos64.yaml  launcher-config-testnet.linux.yaml  launcher-config-testnet.macos64.yaml
bcc-launcher/configuration/launcher/edward/: launcher-config-qa.linux.yaml  launcher-config-qa.windows.yaml
bcc-launcher/src/Bcc/Shell/: Application.hs  CLI.hs  Configuration.hs  Environment.hs  Launcher.hs  Template.hs
bcc-launcher/src/Bcc/Shell/Launcher/: Types.hs
bcc-launcher/src/Bcc/Shell/Update/: Lib.hs  Types.hs
bcc-launcher/test/: EnvironmentSpec.hs  LauncherSMSpec.hs  LauncherSpec.hs  Spec.hs  TemplateSpec.hs  UpdaterSpec.hs  testBcc-WalletFrontend.sh  testUpdater.sh
bcc-shell/: bcc-shell.cabal
bcc-shell/app/NodePCClient/: Main.hs
bcc-shell/dhall/: launcher.dhall  linux.dhall  macos64.dhall  mainnet.dhall  staging.dhall  testnet.dhall  win64.dhall
bcc-shell/specs/: .gitignore  BccShellSpec.hs  Makefile  README.md
bcc-shell/specs/images/: images.hs
bcc-shell/src/: BccWalletIPC.hs  Lib.hs  NodeIPC.hs  Types.hs
bcc-shell/src/NodeIpc/: General.hs  Lib.hs  Message.hs  ServerExample.hs
bcc-shell/test/: BccWalletPCSpec.hs  NodeIPCSMSpec.hs  NodeIPCSpec.hs  Spec.hs
bcc-shell/test/js/: mock-BccWallet.js
ci/: check-hydra.sh
doc/: Makefile  conf.py  index.rst  update-system-old.msc
doc/.sphinx/: requirements.txt
doc/getting-started/: configuration.md  document.md  launcher.md  plan.md  usage.md
doc/planning/: Makefile  milestones-shell.dot
doc/reference/: architecture.md  update-system.md
nix/: bcc-common.nix  bcc-nix-src.json  default.nix  haskell.nix  pkgs.nix  regenerate.sh  update-bcc-nix.sh
scripts/buildkite/: rebuild.hs
