#TODO jorgumandr files
cabal-version:  2.2
name:           bcc-launcher
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/bcc-shell#readme>
category:       Currency
homepage:       https://github.com/The-Blockchain-Company/bcc-shell#readme
bug-reports:    https://github.com/The-Blockchain-Company/bcc-shell/issues
author:         The-Blockchain-Company (Robert Mourey Jr)
maintainer:     The-Blockchain-Company@The-Blockchain-Company.org
copyright:      2021 The-Blockchain-Company
license:        Apache-2.0
license-files:  LICENSE, NOTICE
build-type:     Simple
extra-source-files:
    configuration/launcher/jormungandr/launcher-config-qa.linux.yaml
    configuration/launcher/jormungandr/launcher-config-qa.windows.yaml

source-repository head
  type: git
  location: https://github.com/The-Blockchain-Company/bcc-shell

library
  exposed-modules:
      Bcc.Shell.Launcher
    , Bcc.Shell.Launcher.Types
      -- Update system
    , Bcc.Shell.Update.Lib
    , Bcc.Shell.Update.Types
      -- Other subsystems
    , Bcc.Shell.Application
    , Bcc.Shell.Template
    , Bcc.Shell.Environment
    , Bcc.Shell.CLI
    , Bcc.Shell.Configuration
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.11 && <5
    , Cabal
    , bcc-prelude
    , containers
    , directory
    , filepath
    , process
    , QuickCheck
    , text
    , turtle
    , yaml
    , time-units
    , mtl
    , optparse-applicative
    , bcc-sl-x509
    , safe-exceptions
    , x509-validation

  if os(windows)
    build-depends:     Win32

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable bcc-launcher
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bcc-prelude
    , bcc-launcher
    , bcc-sl-x509
    -- formatting
    , filepath
    , formatting
    -- logging
    , The-Blockchain-Company-monitoring
    -- exception handling
    , safe-exceptions
    , text
    , silently
    , Cabal
    , process
    -- cli
    , optparse-applicative
    -- directory
    , directory

  if os(windows)
    ghc-options: -optl-mwindows

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable mock-klarity-frontend
  main-is: Klarity.hs
  hs-source-dirs:
      app/Mocks
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bcc-prelude

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable mock-installer
  main-is: Installer.hs
  hs-source-dirs:
      app/Mocks
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bcc-prelude

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

test-suite bcc-launcher-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      UpdaterSpec
    , LauncherSpec
    , LauncherSMSpec
    , TemplateSpec
    , EnvironmentSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bcc-launcher
    , bcc-prelude
    , directory
    -- quickcheck
    , QuickCheck
    -- SM
    , quickcheck-state-machine >= 0.6
    -- required because of QSM
    , tree-diff
    -- tests
    , hspec
    , yaml
    , unordered-containers
    , vector
    , temporary
    , filepath
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

